<resources>
    <string name="app_name">Android reference app</string>
    <string name="main_title">Agora Video SDK Samples</string>
    <string name="leave">Leave</string>
    <string name="join">Join</string>
    <string name="authentication_server_hint">Token server URL</string>
    <string name="network_status">Network Status:</string>
    <string name="channel_name_hint">Channel name here</string>
    <string name="broadcaster">Host</string>
    <string name="audience">Audience</string>
    <string name="start_echo_test">Start Echo Test</string>
    <string name="stop_echo_test">Stop Echo Test</string>
    <string name="product">Product:</string>
    <string name="open_media_file">Open Media File</string>
    <string name="play_media_file">" Play Media File"</string>
    <string name="opening_media_file">Opening Media File...</string>
    <string name="pause">Pause media</string>
    <string name="resume">Resume</string>
    <string name="mute">Mute</string>
    <string name="volume_type">Volume type:</string>
    <string name="start_screen_sharing">Start Screen Sharing</string>
    <string name="stop_screen_sharing">Stop screen sharing</string>
    <string name="start_audio_mixing">Start Audio Mixing</string>
    <string name="play_audio_effect">Play audio effect</string>
    <string name="apply_voice_effect">Apply voice effect</string>
    <string name="speakerphone">Speakerphone</string>
    <string name="stop_audio_mixing">Stop audio mixing</string>
    <string name="pause_audio_effect">Pause audio effect</string>
    <string name="resume_audio_effect">Resume audio effect</string>
    <string name="no_background">No background</string>
    <string name="blur_background">Blur background</string>
    <string name="solid_background">Solid background</string>
    <string name="image_background">Image background</string>
    <string name="start_pushing_custom_audio">Start pushing custom audio</string>
    <string name="stop_pushing_custom_audio">Stop pushing custom audio</string>
    <string name="start_pushing_custom_video">Start pushing custom video</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="start_channel_media_relay">Start channel media relay</string>
    <string name="stop_channel_media_relay">Stop Channel Media Relay</string>
    <string name="connecting_">Connecting...</string>
    <string name="stream_to_multiple_channels">Stream to multiple channels</string>
    <string name="leave_second_channel">Leave Second Channel</string>
    <string name="join_second_channel">Join Second Channel</string>
    <string name="voice_effect_chat_beautifier">Voice effect: Chat Beautifier</string>
    <string name="voice_effect_singing_beautifier">Voice effect: Singing Beautifier</string>
    <string name="voice_effect_adjust_formant">Voice effect: Adjust Formant</string>
    <string name="audio_effect_hulk">Audio effect: Hulk</string>
    <string name="audio_effect_voice_changer">Audio effect: Voice Changer</string>
    <string name="audio_effect_voice_equalization">Audio effect: Voice Equalization</string>
    <string name="apply_voice_equalization">Apply voice effect</string>
</resources>