<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioVoiceEffectsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <include
            android:id="@+id/base_layout"
            layout="@layout/base_layout" />

        <Button
            android:id="@+id/AudioMixingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/base_layout"
            android:text="@string/start_audio_mixing"
            android:onClick="audioMixing"
            />

        <Button
            android:id="@+id/PlayAudioEffect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AudioMixingButton"
            android:onClick="playSoundEffect"
            android:text="@string/play_audio_effect" />

        <Button
            android:id="@+id/ApplyVoiceEffect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PlayAudioEffect"
            android:onClick="applyVoiceEffect"
            android:text="@string/apply_voice_effect" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/SwitchSpeakerphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ApplyVoiceEffect"
            android:layout_centerHorizontal="true"
            android:checked="true"
            android:text="@string/speakerphone" />

    </RelativeLayout>

</ScrollView>
