<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/main_video_container"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/border_drawable" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_drawable">

        <LinearLayout
            android:id="@+id/containerLayout"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:paddingVertical="3dp"
            android:orientation="horizontal">
        </LinearLayout>
    </HorizontalScrollView>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonBroadcaster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="40dp"
            android:text="@string/broadcaster"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonAudience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/audience" />
    </RadioGroup>

    <Button
        android:id="@+id/btnJoinLeave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="joinLeave"
        android:text="@string/join" />

</LinearLayout>

